tdc.css
/* ... */
body{
    font-family: 'Source Sans Pro', sans-serif;
    color:white;
    line-height: unset;
	background-color: RGB(39,46,74);
}
/*Bootstrap layout*/
.item {
    border-radius: 10px;
  }
  .bg-light {
    background-color: #262d48 !important;
  }
  .bg-dark {
    background-color: #131c38 !important;
  }
  .component {
    padding: 0px 16px;
  }
  .margin-bottom {
    margin-bottom: 16px !important;
  }
.title{ 
    padding: 10px;
    font-size: 14px;
    height:40px;
}
.title{ 
    padding: 10px;
    font-size: 14px;
    height:20px;
}
.inner-title{
    font-size: 12px;
}
.sub-title{
    height:20px;
    font-size: 11px;
    color: grey;
}
/*.test .div text{
    font-size: 10px !important;
}*/
.topLeftKPI{
    border-right: 1px solid white;
    border-bottom: 1px solid white;
}
.bottomLeftKPI{
    border-right: 1px solid white;
}
.topRightKPI{
    border-bottom: 1px solid white;
}
.my-legend .legend-title {
    text-align: left;
    margin-bottom: 8px;
    font-weight: bold;
    font-size: 90%;
    }
  .my-legend .legend-scale ul {
    margin: 0;
    padding: 0;
    float: left;
    list-style: none;
    }
  .my-legend .legend-scale ul li {
    display: block;
    float: left;
    width: 136px;
    margin-bottom: 6px;
    text-align: center;
    font-size: 80%;
    list-style: none;
    }
  .my-legend ul.legend-labels li span {
    display: block;
    float: left;
    height: 20px;
    width: 35px;
    margin: 0px;
    }
  .my-legend .legend-source {
    font-size: 70%;
    color: #999;
    clear: both;
    }
  .my-legend a {
    color: #777;
    }

.btn-round {
    border-radius: 18px;
    width: 100px;
    font-size: 10px;
}

.btn-right{
	margin-left: -10px;
    padding-left: 25px;
}
.btn-left{
	margin-right: -10px;
    padding-right: 25px;
}
button:active { outline: none !important; }
button:change { outline: none !important;}
button.change:hover { outline: none !important;}
button:focus { outline:0 !important; }
.sn-kpi .sn-kpi-ellips-text {
    color: white;
}
.OverviewDonutChart {
    margin-top: -37px;
    display: inline-grid;
}
.title-wrapper {
    color: white !important;
}
.card-actions.qliksense-card{
	border: none !important;
}

.qv-object-text-image .qv-media-tool-html {
    font-size: 30px;
}
/* qlik visulaization overrides*/

.sn-kpi-ellips-text.sn-kpi-no-shrink .sn-kpi-value {
    font-size: 45px !important;
}


.qv-object-text-image .qv-media-tool-html div {
    margin-top: -25px !important;
}
#header.row {
display:none
}
.qv-pt .cell .value{
    color:white;
}
div#QV-1-8a tr:first-child{
    visibility: collapse;
}
.qv-object .qv-object-header.thin{
    padding-bottom: 0;
    border: none;
}
.qv-pt-meta-button {

    display: none !important

}
.qv-collapsed-listbox .qv-state-count-bar{
    height:1px;
}
table.ng-scope {
    border-collapse: separate;
}
header.qv-object-header.thin {
    height: 0px !important;
}

.qv-pt .cell.header.left {
color:white;
border:none !important
}
th.cell.ng-scope.header.empty.left-meta.bottom-meta{
color:white;
border:none !important
}
table.ng-scope th {
    border: none !important;
}
table.ng-scope td {
    border: none !important;
}
.qv-pt tbody, .qv-pt tr{
color:white;
}
/*********************************/

paper-card.style-scope.header-card.x-scope.paper-card-0{
box-shadow: none;
	  border-radius: 12px;
	  background-color:RGB(19,28,56,0);
}

.paper-toolbar-0 {
    background-image: url(1.png) !important;
    background-size: 100%;
    background-repeat: no-repeat;
    background-color: RGB(39,46,74);
}
paper-card.style-scope.qliksense-card.x-scope.paper-card-0 {
    box-shadow: none;
	  border-radius: 12px;
	  background-color:RGB(19,28,56);

}

#QV1-02{
background-color:  RGB(39,46,74,0) !important;
}
.qv-object-barchart {
    background-color: #00000000 !important;
	color: white !important;
}
.qv-object-content-container{
	color: white !important;
	background-color: #00000000 !important;
}
.qv-inner-object{
	background-color: #00000000 !important;
	color: white !important;
}
.qv-ti ng-scope{
	
	color: white !important;
}
.qva-chart-data-title-align ellips-text{
	color:white
	
}
.interactive.ng-isolate-scope.ng-scope.qv-collapsed-listbox {
    background-color: rgba(0,0,0,0) !important;
}
div.single-object #content {
    padding: 0;
}
.qv-listbox li {
color:black;
}

.qv-collapsed-listbox {
    border: none;
}

.row {
    margin-bottom: 0px;
}

/* LUI */
.lui-popover-container {
    z-index: 10004;
}

/*Qlik objects*/
.qvplaceholder, .qvobject {
    width: 100%;
    height: 100%;
}

.qv-object{
    padding: 0px;
    background-color: transparent;
}
.qv-object-kpi{
    padding: 0px;
}
.qv-object *{
    font-family: 'Source Sans Pro', sans-serif;
}

.listbox-wrapper .qv-object{
    padding: 0px;
}

/*KPIs*/
.kpi {
    height: 6vw;
    max-height: 180px;
    min-height: 80px;
    /*background: #fff;*/
    box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
    border-radius: 12px;
    color: #fff;
    margin-bottom: 15px;
	background-color:RGB(19,28,56);

}
.kpi article{
     width: 80%;
}
.kpi-row{
    margin-bottom: 15px;
}
.kpi-side{
    position: absolute;
    right: 20px;
    top: 50%;
    margin-top: -25px;
    width: 40px;
    height: 40px;
}
.kpi-side i{
    font-size: 40px;
    opacity: .2;
    color: #fff;
}
.qv-object-kpi .kpi-data{
    align-items: flex-start;
    padding-left: 15px;
}

#KPI-01 .kpi-value{
    color: #fff !important;
}
#KPI-02 .kpi-value{
    color: #fff!important;
}
#KPI-03 .kpi-value{
    color: #fff!important;
}
#KPI-04 .kpi-value{
    color: #fff!important;
}
/* ... */

